# sapiens-rust-mod-template

./: .gitignore  Cargo.toml  cargo-generate.toml
src/: biome.rs  lib.rs
