[package]
# name = "{{project-name}}"
name = "rust-mod-template"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sapiens-rs = { git = "https://github.com/DethRaid/sapiens-rs.git" }

[features]
default = []

biome = []
climate = []
height = []
particles = []
rainfall = []

all = ["biome", "climate", "height", "particles", "rainfall", "default"]
